--- a/package.json
+++ b/package.json
@@ -4,18 +4,22 @@
   "description": "Api de Filmes criada no curso Explorer",
   "main": "./src/server.js",
   "scripts": {
-    "start":"node ./src/server.js",
-    "dev":"nodemon ./src/server.js",
+    "start": "node ./src/server.js",
+    "dev": "nodemon ./src/server.js",
     "migrate": "knex migrate:latest"
   },
   "keywords": [],
   "author": "Wesley Quirino",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express": "^4.18.3",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
+    "multer": "^1.4.5-lts.1",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
   },
